Oracle tests, and test reorganization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ thiserror = "*"
     git = "https://github.com/justinpombrio/no-nonsense-flamegraphs"
     optional = true
 
+[dev-dependencies]
+rand = "*"
+
 [profile.release]
 debug = true
 
