--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,17 @@ edition = "2018"
 [dependencies]
 once_cell = "1.*"
 thiserror = "1.*"
-unicode-width = "*"
+unicode-width = "0.1"
 [dependencies.no-nonsense-flamegraphs]
     version = "0.2.*"
     git = "https://github.com/justinpombrio/no-nonsense-flamegraphs"
     optional = true
 
 [dev-dependencies]
-rand = "*"
+rand = "0.8"
+serde_json = "1.0"
+termion = "3.0"
+clap = { version = "4.5", features = ["derive"] }
 
 [profile.release]
 debug = true
